# chat-rust

./: Cargo.toml  Rocket.toml
crates/server/: Cargo.toml
crates/server/src/: lib.rs
src/: main.rs
tests/: ping.rs
